--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,48 +1,53 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    position: relative;
-  
-    .logo {
-      font-size: 25px;
-      font-weight: 600;
-      color: #8a4baf;
-  
-      @media (max-width: 768px) {
-        font-size: 18px;
-      }
-    }
-  
-    .link {
-      display: flex;
-      gap: 2rem;
-  
-      @media (max-width: 768px) {
-        gap: 0.5rem;
-      }
-  
-      a {
-        text-decoration: none;
-        color: #333;
-        transition: 0.3s;
-  
-        &:hover {
-          color: #8a4baf;
-        }
-      }
-    }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  position: relative;
+  flex-wrap: wrap; /* Allow items to wrap on small screens */
+}
+
+.logo {
+  font-size: 25px;
+  font-weight: 600;
+  color: #8a4baf;
+
+  @media (max-width: 768px) {
+    font-size: 18px;
   }
-  .account-icon {
-    font-size: 24px;
-    color:  #8a4baf;
-    vertical-align: middle;
+}
+
+.link {
+  display: flex;
+  gap: 2rem;
+
+  @media (max-width: 768px) {
+    flex-direction: column; /* Stack links vertically on small screens */
+    gap: 0.5rem;
+    width: 100%;
+    text-align: center;
+    margin-top: 10px; /* Add space above for better separation */
   }
-  
-  .link a:hover .account-icon {
-    color: #674636; 
-  }
-  
+}
+
+.link a {
+  text-decoration: none;
+  color: #333;
+  transition: 0.3s;
+}
+
+.link a:hover {
+  color: #8a4baf;
+}
+
+.account-icon {
+  font-size: 24px;
+  color: #8a4baf;
+  vertical-align: middle;
+}
+
+.link a:hover .account-icon {
+  color: #674636; 
+}
