--- a/src/pages/courses/courses.css
+++ b/src/pages/courses/courses.css
@@ -42,7 +42,7 @@
     .course-container {
       flex-direction: column;
       gap: 20px;
-      margin:auto;
+      align-items: center;
     }
 
     h2 {
