--- a/src/pages/internship/internship.css
+++ b/src/pages/internship/internship.css
@@ -22,7 +22,7 @@ h2 {
 }
 
 .internship-card {
-  background-color: #FFFBF5;;
+  background-color: #FFFBF5;
   padding: 20px;
   width: 280px;
   border-radius: 10px;
