--- a/src/pages/auth/auth.css
+++ b/src/pages/auth/auth.css
@@ -6,7 +6,7 @@
     background-color: white;
   
     .auth-form {
-      background-color: #fff;
+      background-color: #FFFBF5;
       padding: 30px;
       border-radius: 10px;
       box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
